src/objects/DataDictionary__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_synced__c</fullName>
        <label>Last synced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TableEnumORId__c</fullName>
        <description>TableEnumORId</description>
        <inlineHelpText>TableEnumORId</inlineHelpText>
        <label>TableEnumORId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api__c</fullName>
        <label>api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DataDictionary</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Active__c</columns>
        <columns>Last_synced__c</columns>
        <columns>api__c</columns>
        <columns>TableEnumORId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Active__c</columns>
        <columns>Last_synced__c</columns>
        <columns>Sync__c</columns>
        <columns>TableEnumORId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All fields</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>DataDictionaries</pluralLabel>
</CustomObject>